--- a/journalApp/src/main/resources/application.properties
+++ b/journalApp/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=journaldb
 # spring.data.mongodb.username=something  if authentication 
 # spring.data.mongodb.password=something
+spring.data.mongodb.auto-index-creation=true
